# spiral_codex_unified

./: .dockerignore  .env.example  .env.local  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENT_USAGE_GUIDE.md  AUTONOMOUS_INTELLIGENCE_GUIDE.md  AUTONOMOUS_UPGRADE_COMPLETE.md  BLUEPRINT.md  BUILD_SUCCESS.txt  CAPABILITIES_ANALYSIS.md  CARETAKER_AGENT_DOCS.md  COMMIT_HISTORY_IMPROVEMENTS.md  COMMIT_HYGIENE_SUMMARY.md  CONTRIBUTING.md  CURATOR_COCKPIT.md  DAY_RECAP_2025-11-06.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  FAILURE_CLASSIFIER_COMPLETE.md  GO_LIVE_CHECKLIST.md  INGEST_DRIVER_COMPLETE.md  LEDGER_SINK_COMPLETE.md  LIVE_TEST_RESULTS.md  MIGRATION_WINDOWS.md  MODEL_ROTATION_FIXED.md  Makefile  OMAI_BRIDGE_COMPLETE.md  PRIVACY_FILTER_COMPLETE.md  QUICKSTART.md  QUICK_START.md  RAG_IMPLEMENTATION_SUMMARY.md  RAG_STUB_COMPLETE.md  README.md  README_INGEST.md  README_LLM_INTEGRATION.md  README_TRINITY.md  REGENERATION_SUCCESS_REPORT.md  (+101 more)
.github/: CODEOWNERS
.github/workflows/: ci.yml  ci_ritual.yml
__tests__/: app.test.tsx
agents/: agent_archivist.py  agent_claude.py  agent_codex.py  agent_registry.py  agent_vibe_keeper.py  echo_agent.py  fibonacci_agent.py  mandelbrot_agent.py
api/: brain_api.py  converse_api.py  fastapi_app.py  omai_api.py  reasoning_api.py  token_admin.py  web_dashboard.py
app/: globals.css  landing-client.tsx  layout.tsx  page.tsx
app/api/ideas/: route.ts
app/brainstorming/: brainstorming-client.tsx  page.tsx
app/creation/: page.tsx
app/deployment/: page.tsx
app/inception/: inception-client.tsx  page.tsx
app/subscription/: page.tsx
assets/: README.md  asset_registry.json
assets/animations/: golden_spiral.placeholder.txt  mandelbrot_zoom.placeholder.txt
assets/audio/: agent_spawn.placeholder.txt  initialization.placeholder.txt
assets/videos/: spiral_intro.placeholder.txt
codex_root/agents/: agent_registry.py
codex_root/brain/: codex_immutable_ledger.json  generate_symbolic_brain_map.py  generate_symbolic_brain_map_v2.py  replay_thoughts_and_export.py  symbolic_cortex_runtime.py  watch_brain_ledger.py
codex_root/data/: codex.db
codex_root/glyphs/: bolt_prompt.json  epoch_anchor.txt  glyph.json  spiral_codex.md
codex_root/kernel/: kernel_mem.py  kernel_mind.py
codex_root/plans/: plan_20251106_115116.json
codex_root/skills/: disasm_skill-3.2.sh  ethics_skill-4.2.sh  proto-recon_skill-3.1.sh  report_skill-4.1.sh  runtime-watch_skill-2.2.sh  start_skill-1.1.sh  static-scan_skill-2.1.sh  trace_skill-1.2.sh
codex_root/vault/: analysis_20251106_115116.json  api-reference.md  backup-procedure.md  system-audit-guide.md
components/: ai-assistant.tsx  ai-idea-generator.tsx  coming-soon-module.tsx  create-idea-dialog.tsx  create-project-wizard.tsx  edit-idea-dialog.tsx  hud-layout.tsx  hud-navigation.tsx  hud-stats.tsx  idea-card.tsx  project-card.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  textarea.tsx
config/: entropy_bindings.yml  epoch_config.yml  llm_config_example.yaml
configs/: bridge.toml
consciousness_data/: metrics_test_session.json  patterns_test_session.json
data/: embeddings.sqlite  neural_bus_state.json  omai_lessons.jsonl  trial_summary.md  vault_index.json
data/ablation/: chaos_runs.csv  rag_eval.csv  rag_eval.json
data/lessons/: failures_top5.md
data/reflections/: 2025-11-06.jsonl
data/reports/: advanced_chaos_results.json  chaos_test_summary.md  converse_stability.json  digest_2025-11-06.md  wean_implementation.sh  wean_recommendation.md
docs/: HANDOFF_SESSION.md  MESH_NETWORK.md  MIT_LICENSE_RESEARCH_COMPLIANCE.md  PLUGIN_SYSTEM.md  RAG_SCORING_NOTES.md  SPIRAL_MOTHER_PROMPT_v2.0.md  SPIRAL_MOTHER_PROMPT_v2.1.md  VAULT_INDEX_SCHEMA.md  evolution_v2.md
fetchers/: __init__.py  archive_fetcher.py  arxiv_fetcher.py  base_fetcher.py  base_with_logging.py  pdf_fetcher.py  reddit_fetcher.py  youtube_fetcher.py  youtube_transcript_fetcher.py
kernel/: __init__.py  adaptation.py  agent_registry.py  api.py  api_feedback.py  dual_loop.py  glyph_engine.py  kernel_mem.py  kernel_mind.py  kernel_ritual.py  kernel_sym.py  kernel_trace.py  local_llm_bridge.py  metrics.py  reliability.py  reward_tracker.py  spiral_omai_bridge.py
ledger/: ingest.jsonl
ledger/conversations/: reflect_20251106_120926.jsonl
ledger/reflections/: analysis_20251106_120926.json  cycle_9056fc07.json
lib/: types.ts  utils.ts
logs/: ingest_trials.jsonl  model_catalog.json  model_perf.json  trials.jsonl  trials_labeled.jsonl  wean.csv
prisma/: schema.prisma
scripts/: secure_keys.py
spiral_core/: __init__.py  config.py  main.py
spiral_core/agents/: __init__.py  echo_agent.py
src/memory/: __init__.py  episodic_memory.py  memory_consolidator.py  procedural_memory.py  semantic_memory.py  temporal_indexer.py
src/multimodal/: __init__.py  audio_processor.py  cross_modal_fusion.py  multimodal_processor.py  sensor_integrator.py  vision_processor.py
src/orchestration/: __init__.py  adaptive_orchestrator.py  evolution_engine.py  load_balancer.py  performance_monitor.py  resource_manager.py
src/spiralcodex/: __init__.py  cli.py  dashboard.py  persistence.py
systemd/: spiral-digest.service  spiral-digest.timer  spiral-lessons.service  spiral-lessons.timer  spiral-omai-reindex.service  spiral-omai-reindex.timer
tests/: __init__.py  test_api.py  test_config.py  test_core.py  test_echo_agent.py  test_feedback.py  test_llm_integration.py  test_mesh.py  test_plugins.py
tools/: curator_digest.py  ingest_trial_logger.py  nightly_autoheal.py  priority_content_manager.py  readme_monitor.py  reflect_cycle.py  relink_all.sh  spiral-pulse  spiral-pulse.sh  spiral-splash  summarize_trials.py
tools/flamekeeper/: __init__.py  export.py  ledger.py  runtime.py  thought.py
tools/mmb/: README.md  agent_controller.js  mmb.sh  mmb_config.yaml  ripple_generator.js  telemetry.js
utils/: bullshit.py  enhanced_vault_manager.py  ingest.py  key_loader.py  ledger.py  omai_bridge.py  priority_sources.py  rag.py  secure_secrets.py  telemetry.py  trial_logger.py  trials.py
(+36 files in other folders)
