# 🌀 Spiral Codex Organic OS - Project Configuration
# ==================================================
# Modern Python project configuration in TOML format

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spiral-codex-organic-os"
version = "1.0.0"
description = "🌀 The Organic Operating System for Conscious AI Agents"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Spiral Codex Development Team", email = "dev@spiralcodex.org"},
]
maintainers = [
    {name = "Spiral Codex Development Team", email = "dev@spiralcodex.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agents", "organic", "spiral", "fastapi", "consciousness"]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "httpx>=0.25.2",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "pre-commit>=3.5.0",
    "coverage[toml]>=7.3.0",
]
database = [
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.7",
]
cache = [
    "redis>=5.0.1",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
]
all = [
    "spiral-codex-organic-os[dev,database,cache,monitoring]",
]

[project.urls]
"Homepage" = "https://github.com/spiral-codex/spiral-codex-unified"
"Bug Reports" = "https://github.com/spiral-codex/spiral-codex-unified/issues"
"Source" = "https://github.com/spiral-codex/spiral-codex-unified"
"Documentation" = "https://spiral-codex.readthedocs.io/"

[project.scripts]
spiral-codex = "spiral_core.main:main"

# === Tool Configurations ===

# === Pytest Configuration ===
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=spiral_core",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: Integration tests that require external services",
    "unit: Fast unit tests",
    "slow: Slow tests that can be skipped during development",
    "api: API endpoint tests",
    "agent: Agent functionality tests",
    "config: Configuration tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# === Coverage Configuration ===
[tool.coverage.run]
source = ["spiral_core"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"

# === Black Configuration ===
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# === isort Configuration ===
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "venv/*", "env/*"]
known_first_party = ["spiral_core"]
known_third_party = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "pytest",
    "httpx",
    "requests",
]

# === MyPy Configuration ===
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "sqlalchemy.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

# === Bandit Configuration ===
[tool.bandit]
exclude_dirs = ["tests", "venv", "env"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection for tests

[tool.bandit.assert_used]
skips = ["*/tests/*", "*_test.py"]

# === Flake8 Configuration (in setup.cfg since flake8 doesn't support pyproject.toml) ===
# Note: Flake8 configuration will be in setup.cfg

# === setuptools Configuration ===
[tool.setuptools.packages.find]
include = ["spiral_core*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
spiral_core = ["py.typed"]

# === Wheel Configuration ===
[tool.bdist_wheel]
universal = false
